[package]
name = "reforward"
version = "3.4.7"
edition = "2021"
authors = ["notcomsed"]
description = "reforward rust version"
license = "MIT"
repository = "https://github.com/notcomsed/reforward-rs"
readme = "README.md"

[dependencies]
tokio = { version = "1", features = ["full"] }
once_cell = "1.9.0"
rand = "0.8.5"
